feat: Hardcoded sub claim used as user bucket identifier breaks with Microsoft Entra (use oid instead) #1344